Modernize for Java 21 / Spring 6; fix SBOM path after upgrade
- DTOs -> records; Stream.toList(); clearer strike comparison
- Hand-rolled error JSON -> ProblemDetail (RFC 9457) via ResponseEntityExceptionHandler
- Hibernate 6: drop 'distinct' from fetch-join queries (auto de-duplication)
- @MockBean -> @MockitoBean
- Adopt Boot-managed CycloneDX SBOM (META-INF/sbom/application.cdx.json, ships in jar)
- osv-scan.ps1: staleness guard refuses an SBOM older than the jar
- Scan: 7 vulns (3 critical, Tomcat 10.1.55 in EOL Boot 3.5.16)
- docs/MIGRATION.md, learning log Phase 3